@@ -21,7 +21,7 @@ public class IronsightsHandler {
 	public static void aim(Player player){
 			if(!QualityArmory.isIronSights(player.getItemInHand())){
 				//offHandStorage.put(player, player.getInventory().getItemInOffHand());
-				if(player.getInventory().getItemInOffHand() != null && !player.getInventory().getItemInOffHand().getType().isAir()){
+				if(player.getInventory().getItemInOffHand() != null && !player.getInventory().getItemInOffHand().getType().equals(Material.AIR)){
 					if(player.getInventory().firstEmpty()==-1){
 						player.getWorld().dropItem(player.getLocation(),player.getInventory().getItemInOffHand());
 					}else {
